Tue Jun 14 01:05:10 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/coverage/coverage.c: make it restartable.  [ruby-core:36539]

Mon Jun 13 23:55:40 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_schedule_rec): call gvl_yield() unconditionally.
	* thread_pthread.c: remove HAVE_GVL_YIELD macro.
	* thread_win32.c (gvl_yield): new. this fallback logic was moved from
	  rb_thread_schedule_rec().

Mon Jun 13 23:50:25 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/io/console/console.c (console_dev): typo.

Mon Jun 13 23:38:23 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_parse_string): flush delayed token.  based on a
	  patch by Masaya Tarui in [ruby-dev:43762].  Bug #4544

	* parse.y (yylex): revert r24557.  delayed token at the end of
	  string should be flushed already by the above change.

Mon Jun 13 23:33:31 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_dev): console should be
	  unbuffered.

	* ext/io/console/console.c (console_dev): take care of no-ctty
	  case.

Mon Jun 13 23:06:12 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c: rewrite GVL completely.
	* thread_win32.c: ditto.
	* thread_pthread.h: ditto.
	* vm_core.h: ditto.
	* thread.c: ditto.

Mon Jun 13 23:11:52 2011  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_unix.rb: don't use Thread.abort_on_exception.

Mon Jun 13 23:05:01 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (unix_send_io): race condition fixed.
	  (unix_recv_io): ditto.
	  fixed by Eric Wong.  [ruby-core:35574]

	* test/socket/test_unix.rb: test added for above problem.

Mon Jun 13 21:41:05 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_win32.c (native_cond_signal): remove unnecessary rb_bug().
	  It's addional fix for r32021. [Bug #4696]

Mon Jun 13 20:50:49 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_ec.rb